--- a/index.html
+++ b/index.html
@@ -1055,7 +1055,7 @@
                                         <i class="fab fa-linkedin"></i>
                                     </div>
                                     <h4>LinkedIn</h4>
-                                    <p>Connect with us professionally</p>
+                                    <p>Reach us out</p>
                                 </a>
                             </div>
                             <div class="col-md-6">
