--- a/index.html
+++ b/index.html
@@ -161,8 +161,20 @@
             transform: translateX(-50%);
         }
 
-        
+        .navbar-toggler {
+            border: none;
+            padding: 4px 8px;
+            background: var(--glass-bg);
+            border-radius: 5px;
+        }
 
+        .navbar-toggler:focus {
+            box-shadow: none;
+        }
+
+        .navbar-toggler-icon {
+            background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.8%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+        }
         .logo-img {
             height: 60px;
             width: 100%;
@@ -666,6 +678,7 @@
             transform: translateX(0);
         }
     </style>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
@@ -680,23 +693,25 @@
     </div>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="#home"><img class="logo-img" src="https://cdn.jsdelivr.net/gh/anjumshehzad1/assets@main/Assets/logo.jpg" alt="Logo"></a>
-            
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#home" onclick="closeNavbar()">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#about" onclick="closeNavbar()">About Us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#services" onclick="closeNavbar()">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#projects" onclick="closeNavbar()">Projects</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#domains" onclick="closeNavbar()">Domains</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact" onclick="closeNavbar()">Contact</a></li>
-                </ul>
-            </div>
+   <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
+    <div class="container">
+        <a class="navbar-brand" href="#home"><img class="logo-img" src="https://cdn.jsdelivr.net/gh/anjumshehzad1/assets@main/Assets/logo.jpg" alt="Logo"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a class="nav-link" href="#home" onclick="closeNavbar()">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="#about" onclick="closeNavbar()">About Us</a></li>
+                <li class="nav-item"><a class="nav-link" href="#services" onclick="closeNavbar()">Services</a></li>
+                <li class="nav-item"><a class="nav-link" href="#projects" onclick="closeNavbar()">Projects</a></li>
+                <li class="nav-item"><a class="nav-link" href="#domains" onclick="closeNavbar()">Domains</a></li>
+                <li class="nav-item"><a class="nav-link" href="#contact" onclick="closeNavbar()">Contact</a></li>
+            </ul>
         </div>
-    </nav>
+    </div>
+</nav>
 
     <!-- Hero Section -->
     <section id="home" class="hero">
@@ -1099,6 +1114,18 @@
             </div>
         </div>
     </footer>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+    window.closeNavbar = function () {
+        const navbarCollapse = document.querySelector('#navbarNav');
+        const bsCollapse = bootstrap.Collapse.getInstance(navbarCollapse);
+
+        if (bsCollapse) {
+            bsCollapse.hide(); // Close the navbar
+        }
+    };
+});
+    </script>
 </body>
 
 </html>
