--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         }
 
         .hero h1 {
-            font-family: 'Space Grotesk', sans-serif;
+           font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
             font-size: 4rem;
             font-weight: 700;
             margin-bottom: 1.5rem;
@@ -730,7 +730,7 @@
                     <div class="hero-visual">
                         <div
                             style="text-align: center; font-size: 15rem; background: var(--gradient-1); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text;">
-                            <i class="fas fa-laptop-code"></i>
+                             <i class="fa-brands fa-phoenix-framework"></i>
                         </div>
                     </div>
                 </div>
@@ -978,6 +978,13 @@
                         <h5 class="project-title">Graphic Design</h5>
                         <p class="project-description">Sample of some of the work, overall logos, flyers, brochures,
                             social-media posts, posters and business cards</p>
+                    </div>
+                </div>
+                <div class="scroll-item">
+                    <div class="project-icon"><i class="fas fa-code"></i></div>
+                    <div class="project-content">
+                        <h5 class="project-title">Many More..</h5>
+                        <p class="project-description">We have many differnet scale projects in mentioned domains not listed here, for discussion fell free to contact us.</p>
                     </div>
                 </div>
             </div>
