--- a/index.html
+++ b/index.html
@@ -984,7 +984,7 @@
                     <div class="project-icon"><i class="fas fa-code"></i></div>
                     <div class="project-content">
                         <h5 class="project-title">Many More..</h5>
-                        <p class="project-description">We have many differnet scale projects in mentioned domains not listed here, for discussion fell free to contact us.</p>
+                        <p class="project-description">We have many differnet scale projects in mentioned domains not listed here, for discussion feel free to contact us.</p>
                     </div>
                 </div>
             </div>
