--- a/index.html
+++ b/index.html
@@ -1344,7 +1344,7 @@
                     <div class="vision-mission-card vision-card">
                         <div class="card-header-section">
                             <div class="icon-wrapper vision-icon">
-                                <i class="fas fa-telescope"></i>
+                              <i class="fa-solid fa-eye"></i>
                             </div>
                             <div class="card-title-section">
                                 <h4>Our Vision</h4>
@@ -1908,3 +1908,4 @@
     </script>
 </body>
 </html>
+
