--- a/index.html
+++ b/index.html
@@ -1717,8 +1717,8 @@
                         experiences across all devices.</p>
                     <ul class="service-features">
                         <li><i class="fas fa-check"></i> React Native Apps</li>
-                        <li><i class="fas fa-check"></i> Flutter Development</li>
-                        <li><i class="fas fa-check"></i> iOS & Android Native</li>
+                        <li><i class="fas fa-check"></i> Responsive Interfaces</li>
+                        <li><i class="fas fa-check"></i> Android & iOS</li>
                         <li><i class="fas fa-check"></i> App Store Deployment</li>
                     </ul>
                 </div>
@@ -2455,3 +2455,4 @@
 </body>
 
 </html>
+
