--- a/index.html
+++ b/index.html
@@ -3,9 +3,30 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ASH TECH - Innovative Software Solutions</title>
-    <link rel="icon" href="https://cdn.jsdelivr.net/gh/anjumshehzad1/assets@main/Assets/logo.jpg" type="image/png">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>ASH TECH - Innovative Software Solutions</title>
+
+<!-- Basic SEO -->
+<meta name="description" content="ASH TECH provides innovative software solutions including web development, blockchain, AI, and custom software projects. Explore our portfolio and services.">
+<meta name="keywords" content="ASH TECH, software development, web development, blockchain, AI solutions, portfolio, IT services, technology solutions, GitHub Pages, React projects, JavaScript, TailwindCSS, digital solutions">
+<meta name="author" content="ASH TECH">
+
+<!-- Favicon -->
+<link rel="icon" href="https://cdn.jsdelivr.net/gh/anjumshehzad1/assets@main/Assets/logo.jpg" type="image/png">
+
+<!-- Open Graph / Social Media Sharing -->
+<meta property="og:title" content="ASH TECH - Innovative Software Solutions">
+<meta property="og:description" content="Explore ASH TECH portfolio: web development, blockchain, AI, and custom software solutions.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://ash-techs.github.io/portfolio/">
+<meta property="og:image" content="https://cdn.jsdelivr.net/gh/anjumshehzad1/assets@main/Assets/logo.jpg">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="ASH TECH - Innovative Software Solutions">
+<meta name="twitter:description" content="Explore ASH TECH portfolio: web development, blockchain, AI, and custom software solutions.">
+<meta name="twitter:image" content="https://cdn.jsdelivr.net/gh/anjumshehzad1/assets@main/Assets/logo.jpg">
+
     <!-- Bootstrap CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
@@ -2455,4 +2476,5 @@
 </body>
 
 </html>
+
 
