--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ASH TECH - Innovative Software Solutions</title>
+<title>ASH TECH - Innovative Software Solutions | Web, Blockchain & Software Development</title>
 
 <!-- Basic SEO -->
 <meta name="description" content="ASH TECH provides innovative software solutions including web development, blockchain, AI, and custom software projects. Explore our portfolio and services.">
-<meta name="keywords" content="ASH TECH, software development, web development, blockchain, AI solutions, portfolio, IT services, technology solutions, GitHub Pages, React projects, JavaScript, TailwindCSS, digital solutions">
+<meta name="keywords" content="ASH TECH, virtual software house, software house, portfolio, software development, web development, blockchain, AI solutions, portfolio, IT services, technology solutions, GitHub Pages, React projects, JavaScript, TailwindCSS, digital solutions">
 <meta name="author" content="ASH TECH">
 
 <!-- Favicon -->
@@ -26,6 +26,42 @@
 <meta name="twitter:title" content="ASH TECH - Innovative Software Solutions">
 <meta name="twitter:description" content="Explore ASH TECH portfolio: web development, blockchain, AI, and custom software solutions.">
 <meta name="twitter:image" content="https://cdn.jsdelivr.net/gh/anjumshehzad1/assets@main/Assets/logo.jpg">
+
+<!-- Structured Data: Organization / Website -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "ASH TECH",
+  "url": "https://ash-techs.github.io/portfolio/",
+  "logo": "https://cdn.jsdelivr.net/gh/anjumshehzad1/assets@main/Assets/logo.jpg",
+  "sameAs": [
+    "https://youtube.com/@ashtechit",
+    "https://www.facebook.com/profile.php?id=61579724319475",
+    "https://www.linkedin.com/company/ash-tech-virtual-software-house/",
+    "https://www.instagram.com/ashtech.it"
+  ],
+  "contactPoint": {
+    "@type": "ContactPoint",
+    "email": "shehzadaashan@gmail.com",
+    "contactType": "customer support"
+  }
+}
+</script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "ASH TECH Portfolio",
+  "url": "https://ash-techs.github.io/portfolio/",
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "https://ash-techs.github.io/portfolio/?s={search_term_string}",
+    "query-input": "required name=search_term_string"
+  }
+}
+</script>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
@@ -2476,5 +2512,6 @@
 </body>
 
 </html>
+
 
 
