--- a/index.html
+++ b/index.html
@@ -1291,11 +1291,9 @@
 /* Brand Colors */
 .footer-social a.youtube { color: #FF0000; }
 .footer-social a.facebook { color: #1877F2; }
-.footer-social a.instagram { 
-  color: #E1306C; 
-}
+.footer-social a.instagram { color: #E1306C; }
 .footer-social a.linkedin { color: #0A66C2; }
-
+.footer-social a.gmail { color: #D44638; } 
         .footer-bottom {
             text-align: center;
             padding-top: 2rem;
@@ -2272,7 +2270,13 @@
 
             <!-- Social Media Icons -->
             <div class="footer-social">
-                <a href="https://youtube.com/@ashtechit" target="_blank" aria-label="YouTube" class="youtube">
+              <a href="mailto:shehzadaashan@gmail.com" target="_blank" aria-label="Gmail" class="gmail">
+    <i class="fab fa-google"></i>
+</a>  
+                <a href="https://www.linkedin.com/company/ash-tech-virtual-software-house/" target="_blank" aria-label="LinkedIn" class="linkedin">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+              <a href="https://youtube.com/@ashtechit" target="_blank" aria-label="YouTube" class="youtube">
                     <i class="fab fa-youtube"></i>
                 </a>
                 <a href="https://www.facebook.com/profile.php?id=61579724319475" target="_blank" aria-label="Facebook" class="facebook">
@@ -2281,9 +2285,7 @@
                 <a href="https://www.instagram.com/ashtech.it" target="_blank" aria-label="Instagram" class="instagram">
                     <i class="fab fa-instagram"></i>
                 </a>
-                <a href="https://www.linkedin.com/company/ash-tech-virtual-software-house/" target="_blank" aria-label="LinkedIn" class="linkedin">
-                    <i class="fab fa-linkedin"></i>
-                </a>
+              
             </div>
         </div>
 
@@ -2531,6 +2533,7 @@
 </body>
 
 </html>
+
 
 
 
