--- a/index.html
+++ b/index.html
@@ -2271,7 +2271,7 @@
             <!-- Social Media Icons -->
             <div class="footer-social">
               <a href="mailto:shehzadaashan@gmail.com" target="_blank" aria-label="Gmail" class="gmail">
-    <i class="fab fa-envelope"></i>
+    <i class="fa-solid fa-envelope"></i>
 </a>  
                 <a href="https://www.linkedin.com/company/ash-tech-virtual-software-house/" target="_blank" aria-label="LinkedIn" class="linkedin">
                     <i class="fab fa-linkedin"></i>
@@ -2533,6 +2533,7 @@
 </body>
 
 </html>
+
 
 
 
