--- a/index.html
+++ b/index.html
@@ -1900,6 +1900,7 @@
                         <li><i class="fas fa-check"></i> Design Systems</li>
                     </ul>
                 </div>
+                
 
                 <div class="service-card animate-on-scroll">
                     <div class="service-icon">
@@ -1915,6 +1916,200 @@
                         <li><i class="fas fa-check"></i> Digital Graphics</li>
                     </ul>
                 </div>
+                
+<!-- SEO Metatags -->
+<div class="service-card animate-on-scroll">
+  <div class="service-icon">
+    <i class="fas fa-search"></i>
+  </div>
+  <h4 class="service-title">SEO Metatags</h4>
+  <p class="service-description">Enhancing your website visibility with optimized SEO practices and metadata.</p>
+  <ul class="service-features">
+    <li><i class="fas fa-check"></i> On-Page Optimization</li>
+    <li><i class="fas fa-check"></i> Meta Title & Description</li>
+    <li><i class="fas fa-check"></i> Keyword Research</li>
+    <li><i class="fas fa-check"></i> Performance Monitoring</li>
+  </ul>
+</div>
+
+<!-- Google/Microsoft Listing -->
+<div class="service-card animate-on-scroll">
+  <div class="service-icon">
+    <i class="fab fa-google"></i>
+  </div>
+  <h4 class="service-title">Google/Microsoft Listing</h4>
+  <p class="service-description">Get your business verified and listed on Google and Microsoft directories.</p>
+  <ul class="service-features">
+    <li><i class="fas fa-check"></i> Google Business Profile Setup</li>
+    <li><i class="fas fa-check"></i> Microsoft Bing Listing</li>
+    <li><i class="fas fa-check"></i> Maps Integration</li>
+    <li><i class="fas fa-check"></i> Review & Insights</li>
+  </ul>
+</div>
+
+<!-- Digital Marketing -->
+<div class="service-card animate-on-scroll">
+  <div class="service-icon">
+    <i class="fas fa-bullhorn"></i>
+  </div>
+  <h4 class="service-title">Digital Marketing</h4>
+  <p class="service-description">Boosting your brand visibility with modern digital marketing strategies.</p>
+  <ul class="service-features">
+    <li><i class="fas fa-check"></i> SEO & SEM Campaigns</li>
+    <li><i class="fas fa-check"></i> Pay-Per-Click (PPC)</li>
+    <li><i class="fas fa-check"></i> Email Marketing</li>
+    <li><i class="fas fa-check"></i> Analytics & Reporting</li>
+  </ul>
+</div>
+
+<!-- Social Media Marketing -->
+<div class="service-card animate-on-scroll">
+  <div class="service-icon">
+    <i class="fas fa-share-alt"></i>
+  </div>
+  <h4 class="service-title">Social Media Marketing</h4>
+  <p class="service-description">Engaging audiences through targeted social media campaigns and branding.</p>
+  <ul class="service-features">
+    <li><i class="fas fa-check"></i> Facebook & Instagram Ads</li>
+    <li><i class="fas fa-check"></i> LinkedIn Campaigns</li>
+    <li><i class="fas fa-check"></i> Content Creation</li>
+    <li><i class="fas fa-check"></i> Analytics & Reporting</li>
+  </ul>
+</div>
+
+<!-- Domain/Hosting -->
+<div class="service-card animate-on-scroll">
+  <div class="service-icon">
+    <i class="fas fa-server"></i>
+  </div>
+  <h4 class="service-title">Domain & Hosting</h4>
+  <p class="service-description">Reliable domain registration and hosting services with scalable solutions.</p>
+  <ul class="service-features">
+    <li><i class="fas fa-check"></i> Domain Registration</li>
+    <li><i class="fas fa-check"></i> Shared & Cloud Hosting</li>
+    <li><i class="fas fa-check"></i> SSL & Security</li>
+    <li><i class="fas fa-check"></i> 24/7 Uptime Monitoring</li>
+  </ul>
+</div>
+<!-- ICT Consultancy -->
+<div class="service-card animate-on-scroll">
+  <div class="service-icon">
+    <i class="fas fa-lightbulb"></i>
+  </div>
+  <h4 class="service-title">ICT Consultancy</h4>
+  <p class="service-description">Expert consulting to align IT strategies with business goals and deliver innovation.</p>
+  <ul class="service-features">
+    <li><i class="fas fa-check"></i> IT Strategy & Roadmaps</li>
+    <li><i class="fas fa-check"></i> Cloud Adoption Guidance</li>
+    <li><i class="fas fa-check"></i> Risk & Compliance Advisory</li>
+    <li><i class="fas fa-check"></i> Digital Transformation</li>
+  </ul>
+</div>
+
+<!-- Cyber Security -->
+<div class="service-card animate-on-scroll">
+  <div class="service-icon">
+    <i class="fas fa-shield-alt"></i>
+  </div>
+  <h4 class="service-title">Cyber Security</h4>
+  <p class="service-description">Protecting your business with advanced security solutions and risk mitigation strategies.</p>
+  <ul class="service-features">
+    <li><i class="fas fa-check"></i> Vulnerability Assessment</li>
+    <li><i class="fas fa-check"></i> Penetration Testing</li>
+    <li><i class="fas fa-check"></i> Firewall & Endpoint Security</li>
+    <li><i class="fas fa-check"></i> Incident Response</li>
+  </ul>
+</div>
+
+<!-- Enterprise Solutions -->
+<div class="service-card animate-on-scroll">
+  <div class="service-icon">
+    <i class="fas fa-building"></i>
+  </div>
+  <h4 class="service-title">Enterprise Solutions</h4>
+  <p class="service-description">Scalable solutions that empower organizations to streamline processes and improve efficiency.</p>
+  <ul class="service-features">
+    <li><i class="fas fa-check"></i> ERP & CRM Systems</li>
+    <li><i class="fas fa-check"></i> Business Process Automation</li>
+    <li><i class="fas fa-check"></i> Data Analytics & Reporting</li>
+    <li><i class="fas fa-check"></i> Custom Integration Services</li>
+  </ul>
+</div>
+
+<!-- Network & Infrastructure Services -->
+<div class="service-card animate-on-scroll">
+  <div class="service-icon">
+    <i class="fas fa-network-wired"></i>
+  </div>
+  <h4 class="service-title">Network & Infrastructure Services</h4>
+  <p class="service-description">Reliable network architecture and infrastructure management for seamless connectivity.</p>
+  <ul class="service-features">
+    <li><i class="fas fa-check"></i> LAN/WAN Design & Implementation</li>
+    <li><i class="fas fa-check"></i> Cloud & Hybrid Infrastructure</li>
+    <li><i class="fas fa-check"></i> Data Center Management</li>
+    <li><i class="fas fa-check"></i> Network Monitoring</li>
+  </ul>
+</div>
+
+<!-- Hardware Sales & Support Services -->
+<div class="service-card animate-on-scroll">
+  <div class="service-icon">
+    <i class="fas fa-desktop"></i>
+  </div>
+  <h4 class="service-title">Hardware Sales & Support Services</h4>
+  <p class="service-description">Providing top-quality hardware with ongoing support to ensure optimal performance.</p>
+  <ul class="service-features">
+    <li><i class="fas fa-check"></i> Servers & Workstations</li>
+    <li><i class="fas fa-check"></i> Printers & Peripherals</li>
+    <li><i class="fas fa-check"></i> Maintenance & Repair</li>
+    <li><i class="fas fa-check"></i> Warranty & Support Plans</li>
+  </ul>
+</div>
+
+<!-- Software Development -->
+<div class="service-card animate-on-scroll">
+  <div class="service-icon">
+    <i class="fas fa-code"></i>
+  </div>
+  <h4 class="service-title">Software Development</h4>
+  <p class="service-description">Custom software solutions designed to meet business needs with cutting-edge technology.</p>
+  <ul class="service-features">
+    <li><i class="fas fa-check"></i> Desktop Applications</li>
+    <li><i class="fas fa-check"></i> API Development</li>
+    <li><i class="fas fa-check"></i> SaaS Solutions</li>
+    <li><i class="fas fa-check"></i> Cross-platform Support</li>
+  </ul>
+</div>
+
+<!-- Medical Billing -->
+<div class="service-card animate-on-scroll">
+  <div class="service-icon">
+    <i class="fas fa-file-invoice-dollar"></i>
+  </div>
+  <h4 class="service-title">Medical Billing</h4>
+  <p class="service-description">Streamlined medical billing services to reduce errors and maximize revenue cycles.</p>
+  <ul class="service-features">
+    <li><i class="fas fa-check"></i> Insurance Claim Processing</li>
+    <li><i class="fas fa-check"></i> HIPAA-Compliant Systems</li>
+    <li><i class="fas fa-check"></i> Denial Management</li>
+    <li><i class="fas fa-check"></i> Reporting & Analytics</li>
+  </ul>
+</div>
+
+<!-- Managed Services -->
+<div class="service-card animate-on-scroll">
+  <div class="service-icon">
+    <i class="fas fa-cogs"></i>
+  </div>
+  <h4 class="service-title">Managed Services</h4>
+  <p class="service-description">Proactive management of IT systems to ensure stability, security, and cost efficiency.</p>
+  <ul class="service-features">
+    <li><i class="fas fa-check"></i> 24/7 IT Support</li>
+    <li><i class="fas fa-check"></i> Remote Monitoring</li>
+    <li><i class="fas fa-check"></i> Backup & Disaster Recovery</li>
+    <li><i class="fas fa-check"></i> SLA-based Service</li>
+  </ul>
+</div>
             </div>
         </div>
     </section>
@@ -2568,3 +2763,4 @@
 </body>
 
 </html>
+
