--- a/index.html
+++ b/index.html
@@ -874,6 +874,83 @@
             background: linear-gradient(135deg, #f43f5e, #be123c);
             color: white;
         }
+        .service-card:nth-child(14) .service-icon {
+  /* SEO Metatags */
+  background: linear-gradient(135deg, #3b82f6, #1e3a8a);
+  color: white;
+}
+
+.service-card:nth-child(15) .service-icon {
+  /* Google/Microsoft Listing */
+  background: linear-gradient(135deg, #34a853, #4285f4);
+  color: white;
+}
+
+.service-card:nth-child(16) .service-icon {
+  /* Digital Marketing */
+  background: linear-gradient(135deg, #f59e0b, #b45309);
+  color: white;
+}
+
+.service-card:nth-child(17) .service-icon {
+  /* Social Media Marketing */
+  background: linear-gradient(135deg, #06b6d4, #0e7490);
+  color: white;
+}
+
+.service-card:nth-child(18) .service-icon {
+  /* Domain & Hosting */
+  background: linear-gradient(135deg, #9333ea, #6b21a8);
+  color: white;
+}
+
+.service-card:nth-child(19) .service-icon {
+  /* ICT Consultancy */
+  background: linear-gradient(135deg, #0ea5e9, #0369a1);
+  color: white;
+}
+
+.service-card:nth-child(20) .service-icon {
+  /* Cyber Security */
+  background: linear-gradient(135deg, #ef4444, #7f1d1d);
+  color: white;
+}
+
+.service-card:nth-child(21) .service-icon {
+  /* Enterprise Solutions */
+  background: linear-gradient(135deg, #22c55e, #166534);
+  color: white;
+}
+
+.service-card:nth-child(22) .service-icon {
+  /* Network & Infrastructure Services */
+  background: linear-gradient(135deg, #6366f1, #312e81);
+  color: white;
+}
+
+.service-card:nth-child(23) .service-icon {
+  /* Hardware Sales & Support Services */
+  background: linear-gradient(135deg, #f97316, #7c2d12);
+  color: white;
+}
+
+.service-card:nth-child(24) .service-icon {
+  /* Software Development */
+  background: linear-gradient(135deg, #14b8a6, #134e4a);
+  color: white;
+}
+
+.service-card:nth-child(25) .service-icon {
+  /* Medical Billing */
+  background: linear-gradient(135deg, #eab308, #78350f);
+  color: white;
+}
+
+.service-card:nth-child(26) .service-icon {
+  /* Managed Services */
+  background: linear-gradient(135deg, #64748b, #0f172a);
+  color: white;
+}
 
         .service-card:hover .service-icon {
             transform: scale(1.1) rotate(5deg);
@@ -2763,4 +2840,5 @@
 </body>
 
 </html>
+
 
