--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="icon" href="https://cdn.jsdelivr.net/gh/anjumshehzad1/assets@main/Assets/logo.jpg" type="image/png">
 
     <!-- Open Graph / Social Media Sharing -->
-    <meta property="og:title" content="ASH TECH - Innovative Software Solutions">
+    <meta property="og:title" content="ASH TECH - Innovative IT Solutions">
     <meta property="og:description"
         content="Explore ASH TECH portfolio: web development, blockchain, AI, and custom software solutions.">
     <meta property="og:type" content="website">
@@ -2840,5 +2840,6 @@
 </body>
 
 </html>
+
 
 
