--- a/index.html
+++ b/index.html
@@ -951,6 +951,12 @@
   background: linear-gradient(135deg, #64748b, #0f172a);
   color: white;
 }
+.service-card:nth-child(27) .service-icon {
+  /* Solar Services */
+    
+  background: linear-gradient(135deg, #f97316, #7c2d12);
+  color: white;
+}
 
         .service-card:hover .service-icon {
             transform: scale(1.1) rotate(5deg);
@@ -2157,6 +2163,7 @@
     <li><i class="fas fa-check"></i> Cross-platform Support</li>
   </ul>
 </div>
+                
 
 <!-- Medical Billing -->
 <div class="service-card animate-on-scroll">
@@ -2187,6 +2194,23 @@
     <li><i class="fas fa-check"></i> SLA-based Service</li>
   </ul>
 </div>
+                <!-- Solar Installation -->
+<div class="service-card animate-on-scroll">
+  <div class="service-icon">
+    <i class="fas fa-solar-panel"></i>
+  </div>
+  <h4 class="service-title">Solar Installation</h4>
+  <p class="service-description">
+    Reliable and sustainable solar energy solutions to power homes and businesses with efficiency.
+  </p>
+  <ul class="service-features">
+    <li><i class="fas fa-check"></i> Residential & Commercial Installations</li>
+    <li><i class="fas fa-check"></i> On-grid & Off-grid Solutions</li>
+    <li><i class="fas fa-check"></i> Energy Audits & Consultation</li>
+    <li><i class="fas fa-check"></i> Maintenance & Support</li>
+  </ul>
+</div>
+
             </div>
         </div>
     </section>
@@ -2840,6 +2864,7 @@
 </body>
 
 </html>
+
 
 
 
